--- a/requirements.txt
+++ b/requirements.txt
@@ -91,7 +91,7 @@ PyJWT==2.3.0
 pylint==2.12.2
 PyMsgBox==1.0.9
 pyobjc==7.3
-pyobjc-core==7.3
+pyobjc-core
 pyobjc-framework-Accessibility==7.3
 pyobjc-framework-Accounts==7.3
 pyobjc-framework-AddressBook==7.3
