--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,135 @@ PyJWT==2.3.0
 pylint==2.12.2
 PyMsgBox==1.0.9
 pyobjc
+pyobjc-core
+pyobjc-framework-Accessibility
+pyobjc-framework-Accounts
+pyobjc-framework-AddressBook
+pyobjc-framework-AdServices
+pyobjc-framework-AdSupport
+pyobjc-framework-AppleScriptKit
+pyobjc-framework-AppleScriptObjC
+pyobjc-framework-ApplicationServices
+pyobjc-framework-AppTrackingTransparency
+pyobjc-framework-AuthenticationServices
+pyobjc-framework-AutomaticAssessmentConfiguration
+pyobjc-framework-Automator
+pyobjc-framework-AVFoundation
+pyobjc-framework-AVKit
+pyobjc-framework-BusinessChat
+pyobjc-framework-CalendarStore
+pyobjc-framework-CallKit
+pyobjc-framework-CFNetwork
+pyobjc-framework-ClassKit
+pyobjc-framework-CloudKit
+pyobjc-framework-Cocoa
+pyobjc-framework-Collaboration
+pyobjc-framework-ColorSync
+pyobjc-framework-Contacts
+pyobjc-framework-ContactsUI
+pyobjc-framework-CoreAudio
+pyobjc-framework-CoreAudioKit
+pyobjc-framework-CoreBluetooth
+pyobjc-framework-CoreData
+pyobjc-framework-CoreHaptics
+pyobjc-framework-CoreLocation
+pyobjc-framework-CoreMedia
+pyobjc-framework-CoreMediaIO
+pyobjc-framework-CoreMIDI
+pyobjc-framework-CoreML
+pyobjc-framework-CoreMotion
+pyobjc-framework-CoreServices
+pyobjc-framework-CoreSpotlight
+pyobjc-framework-CoreText
+pyobjc-framework-CoreWLAN
+pyobjc-framework-CryptoTokenKit
+pyobjc-framework-DeviceCheck
+pyobjc-framework-DictionaryServices
+pyobjc-framework-DiscRecording
+pyobjc-framework-DiscRecordingUI
+pyobjc-framework-DiskArbitration
+pyobjc-framework-DVDPlayback
+pyobjc-framework-EventKit
+pyobjc-framework-ExceptionHandling
+pyobjc-framework-ExecutionPolicy
+pyobjc-framework-ExternalAccessory
+pyobjc-framework-FileProvider
+pyobjc-framework-FileProviderUI
+pyobjc-framework-FinderSync
+pyobjc-framework-FSEvents
+pyobjc-framework-GameCenter
+pyobjc-framework-GameController
+pyobjc-framework-GameKit
+pyobjc-framework-GameplayKit
+pyobjc-framework-ImageCaptureCore
+pyobjc-framework-IMServicePlugIn
+pyobjc-framework-InputMethodKit
+pyobjc-framework-InstallerPlugins
+pyobjc-framework-InstantMessage
+pyobjc-framework-Intents
+pyobjc-framework-IOSurface
+pyobjc-framework-iTunesLibrary
+pyobjc-framework-KernelManagement
+pyobjc-framework-LatentSemanticMapping
+pyobjc-framework-LaunchServices
+pyobjc-framework-libdispatch
+pyobjc-framework-LinkPresentation
+pyobjc-framework-LocalAuthentication
+pyobjc-framework-MapKit
+pyobjc-framework-MediaAccessibility
+pyobjc-framework-MediaLibrary
+pyobjc-framework-MediaPlayer
+pyobjc-framework-MediaToolbox
+pyobjc-framework-Metal
+pyobjc-framework-MetalKit
+pyobjc-framework-MetalPerformanceShaders
+pyobjc-framework-MetalPerformanceShadersGraph
+pyobjc-framework-MLCompute
+pyobjc-framework-ModelIO
+pyobjc-framework-MultipeerConnectivity
+pyobjc-framework-NaturalLanguage
+pyobjc-framework-NetFS
+pyobjc-framework-Network
+pyobjc-framework-NetworkExtension
+pyobjc-framework-NotificationCenter
+pyobjc-framework-OpenDirectory
+pyobjc-framework-OSAKit
+pyobjc-framework-OSLog
+pyobjc-framework-PassKit
+pyobjc-framework-PencilKit
+pyobjc-framework-Photos
+pyobjc-framework-PhotosUI
+pyobjc-framework-PreferencePanes
+pyobjc-framework-PushKit
+pyobjc-framework-Quartz
+pyobjc-framework-QuickLookThumbnailing
+pyobjc-framework-ReplayKit
+pyobjc-framework-SafariServices
+pyobjc-framework-SceneKit
+pyobjc-framework-ScreenSaver
+pyobjc-framework-ScreenTime
+pyobjc-framework-ScriptingBridge
+pyobjc-framework-SearchKit
+pyobjc-framework-Security
+pyobjc-framework-SecurityFoundation
+pyobjc-framework-SecurityInterface
+pyobjc-framework-ServiceManagement
+pyobjc-framework-Social
+pyobjc-framework-SoundAnalysis
+pyobjc-framework-Speech
+pyobjc-framework-SpriteKit
+pyobjc-framework-StoreKit
+pyobjc-framework-SyncServices
+pyobjc-framework-SystemConfiguration
+pyobjc-framework-SystemExtensions
+pyobjc-framework-UniformTypeIdentifiers
+pyobjc-framework-UserNotifications
+pyobjc-framework-UserNotificationsUI
+pyobjc-framework-VideoSubscriberAccount
+pyobjc-framework-VideoToolbox
+pyobjc-framework-Virtualization
+pyobjc-framework-Vision
+pyobjc-framework-WebKit
 pyparsing==2.4.7
 pyperclip==1.8.2
 PyRect==0.1.4
